# Meliorate

./: .gitignore  LICENSE  README.md  project.toml  pyproject.toml
include/meliorate/: meliorate.h
src/: Melio.cpp  Melio.h  Meliorate.cpp  Meliorate.h  MetaFunctor.h  TestFunctor.cpp  TestFunctor.h  mono_ptr.h
test/: main.cpp  test.cpp
